fix silly layout issue that was scrunching the homepage up on the left

--- a/less/site.less
+++ b/less/site.less
@@ -37,12 +37,12 @@ html,
 }
 
 .approot {
-    // height: 94%;
     height: 100%;
     box-sizing: border-box;
     display:flex;
     flex-direction:column;
     margin: 0em 1em;
+    flex-grow:1;
 }
 
 @annoyingscrollbars: 5em;
